--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN zProd</title>
+    <title>PLNpopo Prod</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <style>
         * {
@@ -585,7 +585,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            max-width: 300px;
+            max-width: 200px; /* Réduit la largeur des colonnes */
         }
 
         .contact-column-1 p {
@@ -626,7 +626,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            max-width: 300px;
+            max-width: 200px; /* Réduit la largeur des colonnes */
         }
 
         .contact-column-2 p {
@@ -638,7 +638,7 @@
             padding: 0.5rem;
             font-size: 1rem;
             width: 100%;
-            max-width: 250px;
+            max-width: 200px;
             margin-bottom: 1rem;
             background: #333;
             border: 1px solid #555;
@@ -653,7 +653,7 @@
             font-size: 1rem;
             cursor: pointer;
             border-radius: 5px;
-            width: 250px;
+            width: 200px;
         }
 
         .contact-column-2 button:hover {
@@ -740,6 +740,34 @@
             position: relative;
             width: 100%;
             z-index: 1;
+        }
+
+        /* Section Équipement */
+        .equip-section {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: #000;
+            z-index: 998;
+            padding: 2rem;
+            opacity: 0;
+            transform: translateY(100%);
+            transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+
+        .equip-section.active {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .equip-content {
+            width: 66.66%;
+            margin-left: 5%;
+            padding-top: 80px;
         }
 
         /* Responsive */
@@ -896,7 +924,7 @@
 
             .contact-column-1, .contact-column-2 {
                 justify-content: flex-start;
-                max-width: 250px;
+                max-width: 150px;
             }
 
             .social-icons a {
@@ -923,12 +951,12 @@
             <p>PLN Prod</p>
         </div>
         <ul>
-            <li><a href="#narration">Narration</a></li>
-            <li><a href="#publicite">Publicité</a></li>
-            <li><a href="#musique-video">Musique-Vidéo</a></li>
+            <li><a href="#narration" onclick="scrollToProject(4)">Narration</a></li>
+            <li><a href="#publicite" onclick="scrollToProject(7)">Publicité</a></li>
+            <li><a href="#musique-video" onclick="scrollToProject(10)">Musique-Vidéo</a></li>
             <li><a href="#" onclick="showSection('bio')">Bio</a></li>
             <li><a href="#" onclick="showSection('contact')">Contact</a></li>
-            <li><a href="#equipement">Équipement</a></li>
+            <li><a href="#" onclick="showSection('equip')">Équipement</a></li>
         </ul>
     </nav>
 
@@ -1079,19 +1107,17 @@
                 <p>Me contacter pour exprimer<br>notre créativité ensemble</p>
                 <a href="mailto:pln.prod35@gmail.com">pln.prod35@gmail.com</a>
                 <div class="social-icons">
-                    <a href="https://twitter.com" target="_blank">
-                        <svg width="30" height="30" viewBox="0 0 24 24" fill="#1DA1F2">
-                            <path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.897-.957-2.178-1.555-3.594-1.555-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 14.01-7.496 14.01-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z"/>
+                    <a href="https://youtube.com" target="_blank">
+                        <svg width="30" height="30" viewBox="0 0 24 24" fill="#FF0000">
+                            <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
                         </svg>
                     </a>
-                    <a href="https://facebook.com" target="_blank">
-                        <svg width="30" height="30" viewBox="0 0 24 24" fill="#3B5998">
-                            <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"/>
+                    <a href="https://instagram.com" target="_blank">
+                        <svg width="30" height="30" viewBox="0 0 24 24" fill="#E1306C">
+                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.317 3.608 1.292.975.975 1.23 2.242 1.292 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.317 2.633-1.292 3.608-.975.975-2.242 1.23-3.608 1.292-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.317-3.608-1.292-.975-.975-1.23-2.242-1.292-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.317-2.633 1.292-3.608.975-.975 2.242-1.23 3.608-1.292 1.266-.058 1.646-.07 4.85-.07m0-2.163c-3.259 0-3.667.014-4.947.072-1.316.059-2.593.317-3.533 1.257C2.27 2.452 2.013 3.729 1.954 5.053c-.058 1.28-.072 1.688-.072 4.947s.014 3.667.072 4.947c.059 1.324.317 2.6 1.257 3.54.94.94 2.216 1.198 3.54 1.257 1.28.058 1.688.072 4.947.072s3.667-.014 4.947-.072c1.324-.059 2.6-.317 3.54-1.257.94-.94 1.198-2.216 1.257-3.54.058-1.28.072-1.688.072-4.947s-.014-3.667-.072-4.947c-.059-1.324-.317-2.6-1.257-3.54-.94-.94-2.216-1.198-3.54-1.257-1.28-.058-1.688-.072-4.947-.072h-.008zM12 6.875c-3.617 0-6.55 2.925-6.55 6.55s2.925 6.55 6.55 6.55 6.55-2.925 6.55-6.55-2.925-6.55-6.55-6.55zm0 10.85c-2.312 0-4.175-1.867-4.175-4.175s1.863-4.175 4.175-4.175 4.175 1.863 4.175 4.175-1.863 4.175-4.175 4.175zm6.844-10.85c0 .96-.775 1.735-1.735 1.735-.96 0-1.735-.775-1.735-1.735 0-.96.775-1.735 1.735-1.735.96 0 1.735.775 1.735 1.735z"/>
                         </svg>
                     </a>
-                    <a href="https://vimeo.com" target="_blank">
-                        <svg width="30" height="30" viewBox="0 0 24 24" fill="#1AB7EA"></svg>
-                    </a>
+                    <a href="https://vimeo.com" target="_blank" style="font-family: 'cursive'; font-size: 25px;">V</a>
                 </div>
             </div>
             <div class="contact-column-2">
@@ -1107,6 +1133,15 @@
         </div>
     </section>
 
+    <!-- Section Équipement -->
+    <section class="equip-section" id="equip-section">
+        <div class="equip-content">
+            <div class="bio-title">Notre Société</div>
+            <div class="bio-text"><i>PLN Prod est une entreprise de vidéaste spécialisée dans la création de contenus vidéo de haute qualité. Nous sommes passionnés par la réalisation de films et la capture d'instants mémorables. Notre équipe talentueuse travaille avec dévouement pour donner vie à vos idées et projets.</i></div>
+            <a href="#" class="bio-link" onclick="hideEquip()">retour</a>
+        </div>
+    </section>
+
     <!-- Modal -->
     <div class="modal" id="modal">
         <div class="modal-content">
@@ -1118,7 +1153,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 PLN Prod. Tous droits réservés.</p>
+        <p>© 2025 PLN Prod. Tous droits réservés.</p>
     </footer>
 
     <script>
@@ -1208,6 +1243,11 @@
             bioSection.classList.remove('active');
         }
 
+        function hideEquip() {
+            const equipSection = document.getElementById('equip-section');
+            equipSection.classList.remove('active');
+        }
+
         function closeModal() {
             const modal = document.getElementById('modal');
             modal.classList.remove('active');
@@ -1225,6 +1265,14 @@
             let translateX = parseInt(mosaic.style.transform.replace(/translateX\(-(\d+)vw\)/, '$1') || 0);
             if (translateX > 0) translateX -= 100;
             mosaic.style.transform = `translateX(-${translateX}vw)`;
+        }
+
+        function scrollToProject(projectNumber) {
+            const mosaic = document.getElementById('mosaic');
+            const row = Math.floor((projectNumber - 1) / 3);
+            const col = (projectNumber - 1) % 3;
+            mosaic.style.transform = `translateX(-${col * 100}vw)`;
+            window.scrollTo({ top: row * 100 * vh, behavior: 'smooth' });
         }
 
         window.addEventListener('scroll', () => {
